Add jvm args